Closed Bug 1290505 Opened 8 years ago Closed 8 years ago

[e10s] Can't see video on Citytv.com due to overlay

Categories

(Core :: Layout, defect)

38 Branch
Unspecified
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla51
Tracking Status
e10s ? ---
firefox48 + wontfix
firefox49 + verified
firefox50 + verified
firefox51 + verified

People

(Reporter: adamopenweb, Assigned: BenWa, NeedInfo)

References

()

Details

(Keywords: regression, site-compat, Whiteboard: e10s)

Attachments

(5 files)

Attached image citytv.jpg
This bug is originally from webcompat.com https://webcompat.com/issues/2861 STR: 0) Enable flash and use a Canadian ip address 1) Open Firefox Dev Edition 49 or Nightly 50 with multi-process enabled 2) Navigate to http://www.citytv.com/toronto/?video=5049399533001 Expected behavior: Video starts playing Actual behavior: Video plays in background, can hear audio There is an overlay covering up the video window. If I open this website in a non-e10s window, the reported issue reproduces. But if I first disable multi-process in the preferences menu, the issue does not reproduce. When I uncheck this property in dev tools: .bcc-dialog .bcc-dialog-body{ position: relative; } The overlay disappears and you can see the video.
Dev Edition 49 ------------------- with e10s: video doesn't play without e10: video plays GA 47: video plays. I'm worried this is an e10s issue?
Flags: needinfo?(jmathies)
Flags: needinfo?(blassey.bugs)
Whiteboard: e10s
CC'ing Canadian layout-hackers botond, kats, & tnikkel. (In reply to Adam Stevenson from comment #0) > 1) Open Firefox Dev Edition 49 or Nightly 50 with multi-process enabled Do we know yet whether this is a regression? (i.e. will users who get Firefox-48-with-e10s next week be affected by this bug?) (I'm not sure whether it's easy to configure/ensure e10s enabledness in Firefox 48 beta, but you can grab & test a late 48 DevEdition build here to see if 48 is affected: https://archive.mozilla.org/pub/firefox/nightly/2016/06/2016-06-05-00-40-13-mozilla-aurora/ )
Flags: needinfo?(astevenson)
I can reproduce this on Nightly. Downloading beta, on which I'll force enable e10s via browser.tabs.remote.force-enable, and test there.
I have reproduced on 2015-08-01 nightly (with e10s) so far. Going further back...
Daniel, I tested with firefox-48.0a2.en-US.mac.dmg and I'm able to reproduce the issue. With e10s - doesn't play without e10s - plays
Flags: needinfo?(astevenson)
Summary: Can't see video on Citytv.com due to overlay → [e10s] Can't see video on Citytv.com due to overlay
Requesting tracking, since video playback in Flash appears to be broken for this particular case in e10s mode.
I put in the wrong version for comment 6. I've reproduced this on 48 beta 7.
Jim, you've got some plugin related patches in that range. Bob, you've got some NPAPI sandbox patches
Flags: needinfo?(blassey.bugs) → needinfo?(bobowen.code)
I tested on Windows and I didn't see the bug, so this is likely mac only. Reverting the patch for bug 1121811 (even though the code has changed a little since then) fixes the bug for me.
Blocks: 1121811
Flags: needinfo?(bgirard)
sounds like bob is off the hook then
Flags: needinfo?(bobowen.code)
OS: Unspecified → Mac OS X
If I had to guess we might be setting the plugin window size slightly differently in e10s and the plugin is way to strict (otherwise we'd like have seen this show up before). Let me have a look.
Flags: needinfo?(jmathies)
(In reply to Timothy Nikkel (:tnikkel) from comment #11) > Reverting the patch for bug 1121811 (even though the code has changed a > little since then) fixes the bug for me. Do you have the patch that you used for reference? It's far more than a trivial rebase now.
Flags: needinfo?(bgirard)
This is what I used, it's hacky.
Alright I was looking at the other patch. I'm still trying to understand why this specific case only under e10s is so strict.
Alright some progress: That patch just spams SetWindow against the plugin. Certainly not a patch we want to take. Basically we end up this: set plugin window 149, -9858, 675, 381 set plugin window 149, -9858, 675, 381 set plugin window 149, 141, 675, 381 <-- on screen set plugin window 149, 141, 675, 381 I'm not sure what the -9858 is about, could be the page doing something. The problem is without spamming the window set we don't set the window when the value changes to 141 properly: set plugin window 0, 0, 675, 381 set plugin window 149, -9858, 675, 381 set plugin window 0, 0, 675, 381 set plugin window 149, -9858, 675, 381 <-- Last set window is wrong We probably don't trigger an window update when we should. It's probably something e10s specific as well.
I've found the problem and I have a candidate solution. Verifying a few things before I post the patch.
Attachment #8776121 - Flags: review?(jmathies)
This removes an optimization that rode along with bug 1009148 that I initially wrote. We might be able to find a better fix to preserve this optimization but AFAIK this optimization never produced any measurable win. It also was causing our plugin code to behave differently with e10s and non-e10s. In the interest of minimizing e10s risk this is probably the best change. But I'm open to exploring how to preserve this optimization properly. We will want to make sure we get some good coverage of this across platforms. We could limit this chance to OSX only but this change was intended as an OSX optimization so it feels odd to leave it in for other platforms.
Attachment #8776121 - Flags: review?(jmathies) → review+
Comment on attachment 8776121 [details] Bug 1290505 - Remove E10S NPAPI plugin windows special case. https://reviewboard.mozilla.org/r/68026/#review65246
(In reply to Benoit Girard (:BenWa) from comment #20) > This removes an optimization that rode along with bug 1009148 that I > initially wrote. > > We might be able to find a better fix to preserve this optimization but > AFAIK this optimization never produced any measurable win. It also was > causing our plugin code to behave differently with e10s and non-e10s. In the > interest of minimizing e10s risk this is probably the best change. But I'm > open to exploring how to preserve this optimization properly. > > We will want to make sure we get some good coverage of this across > platforms. We could limit this chance to OSX only but this change was > intended as an OSX optimization so it feels odd to leave it in for other > platforms. Originally plugin window clipRect was mac only [1], but it looks like we started working with it in our gtk test plugin at some point. It isn't in use on Windows. Regardless.. this particular area of nsPluginInstanceOwner where we modify it (FixUpPluginWindow [2]) is ifdef'd to mac only so we should be fine on other platforms. [1] http://searchfox.org/mozilla-central/rev/1112b7a5222b71a3b5b68bd531f50ded6bcbc770/dom/plugins/ipc/PluginInstanceParent.cpp#1363 [2] http://searchfox.org/mozilla-central/rev/1112b7a5222b71a3b5b68bd531f50ded6bcbc770/dom/plugins/base/nsPluginInstanceOwner.cpp#3448
Great, let's run it through try and flag it for qa-wanted once it's on nightly to be ready for an uplift.
Assignee: nobody → bgirard
Flags: needinfo?(bgirard)
Mike considers that it is a big deal, tracking. Now, we are going to ship 48 tomorrow. I don't think it is worth delaying the 48 release. However, if this becomes something big, we can do a dot release with a fix before increasing the number of people having e10s = on.
Pushed by b56girard@gmail.com: https://hg.mozilla.org/integration/autoland/rev/192c7f9edb1c Remove E10S NPAPI plugin windows special case. r=jimm
Flags: needinfo?(jsavage)
(adding regression keyword so this appears on the Platform triage radar.)
Keywords: regression
Version: 49 Branch → 38 Branch
Keywords: site-compat
Whiteboard: e10s → e10s,
Whiteboard: e10s, → e10s
(In reply to Sylvestre Ledru [:sylvestre] from comment #24) > Mike considers that it is a big deal, tracking. > > Now, we are going to ship 48 tomorrow. I don't think it is worth delaying > the 48 release. > However, if this becomes something big, we can do a dot release with a fix > before increasing the number of people having e10s = on. From a product manager perspective, I agree, this is a big deal but not worth delaying 48. However we should get this fixed asap. NI Erin so she is in the loop of this.
Flags: needinfo?(elancaster)
Snorp, I am putting back the affected because we want to keep that on our radar. If this bug affects many other websites, we might want to do a dot release before we enable e10s to more users. Clearing the ni to Erin, I already mentioned this bug to her (cf comment 25.5)
Flags: needinfo?(elancaster)
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
qawanted. It's a non-trivial change to the plug-in code and we might want to uplift this. Testing plugin on each platforms with e10s pages such at this one [1] http://www.citytv.com/toronto/?video=5049399533001 and Youtube and making sure the video is visible and that mouse events are sent correctly to the plugin (you can use the video scrubber/timeline control).
Flags: needinfo?(bgirard)
Keywords: qawanted
Andrei, can you help with this one? Thanks Benoit, could you fill the uplift request so that we are ready in case we want to uplift that fast? Thanks
Flags: qe-verify+
Flags: needinfo?(bgirard)
Flags: needinfo?(andrei.vaida)
Comment on attachment 8776121 [details] Bug 1290505 - Remove E10S NPAPI plugin windows special case. Approval Request Comment [Feature/regressing bug #]: bug 1009148 [User impact if declined]: Some broken Flash video [Describe test coverage new/current, TreeHerder]: Limited flash video test coverage. Has been on nightly for a few days [Risks and why]: Medium to high. We're patching the plug-in code which is a finicky beast but at least we're doing in a few limited area. I've flagged qa-wanted. This is something we want to keep an eye on. [String/UUID change made/needed]: none
Flags: needinfo?(bgirard)
Attachment #8776121 - Flags: approval-mozilla-beta?
Attachment #8776121 - Flags: approval-mozilla-aurora?
Comment on attachment 8776121 [details] Bug 1290505 - Remove E10S NPAPI plugin windows special case. E10s and Flash video playback, let's uplift to Aurora50 and stabilize before uplifting to Beta49/Release48. Aurora50+
Attachment #8776121 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
I was able to reproduce this bug on 50.0a1 (2016-08-01) using Mac OS X 10.11 "El Capitan", with an Intel Iris Pro GPU (1536 MB) and flash enabled. Unfortunately, I'm still seeing the bug on 51.0a1 (2016-08-04): - it's reproducible _with and without e10s_ on my end - it's reproducible even if I change the value of the "position" property for .bcc-dialog .bcc-dialog-body Benoit, what's your take on this? Am I missing something?
Flags: needinfo?(andrei.vaida) → needinfo?(bgirard)
Keywords: qawanted
Comment on attachment 8776121 [details] Bug 1290505 - Remove E10S NPAPI plugin windows special case. As comment #34 suggests it is not actually fixed, not taking it for beta for now. Please resubmit when ready.
Attachment #8776121 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
This is fixed for me using 50.0a2 (2016-08-07) and 51.0a1 (2016-08-07) on OSX. I have flash set as always activate when testing, ask to activate doesn't present a prompt. Ciprian - the content is only available in Canada. Could that be the reason?
Flags: needinfo?(ciprian.georgiu)
Attached image Working in Nightly 51
FWIW, I happen to be in Toronto today and the video is working with Flash enabled for me in Nightly. Note the old URL shows a message like: This video is no longer available. I tested with http://www.citytv.com/toronto/?video=5068122152001
Attached image stuck on buffering.png
Flags: needinfo?(ciprian.georgiu)
(In reply to Adam Stevenson from comment #37) > This is fixed for me using 50.0a2 (2016-08-07) and 51.0a1 (2016-08-07) on > OSX. I have flash set as always activate when testing, ask to activate > doesn't present a prompt. > > Ciprian - the content is only available in Canada. Could that be the reason? I do not think this is the reason. I've used a proxy from Canada when I first reproduce the bug, but after the bug was fixed the video or sound is not playing anymore. (it's stuck on buffering) Also the Flash is set to "Always Activate". Any ideas Adam? Am I missing something?
Given Ciprian's caveats in comment 34 & comment 40 (the issue being buffering-related, the site being broken with/without e10s, and broken with/without the overlay hidden), I suspect he's seeing a *different bug*. (and one which doesn't reproduce for people actually in Canada yet -- possibly related to some flash traffic bypassing his proxy, maybe?) Ciprian: do you see the same broken behavior with the *previous* release of Firefox? (47) If you get similarly-broken results in Firefox 47, then we should definitely consider your experience to be a separate bug.
Flags: needinfo?(ciprian.georgiu)
(In reply to Daniel Holbert [:dholbert] > Ciprian: do you see the same broken behavior with the *previous* release of > Firefox? (47) If you get similarly-broken results in Firefox 47, then we > should definitely consider your experience to be a separate bug. Yes I see the same behavior on Firefox 47. Should I log a separate bug for this problem, Daniel?
Flags: needinfo?(ciprian.georgiu)
Probably best to file a separate bug for that, then -- yeah. (Though depending on your proxy setup, your issue might not be a Firefox-specific problem at all, but rather the proxy being insufficient.) In any case, it seems we've established that the issue Ciprian is hitting is *not* a (recent) regression and is distinct from the issue reported/fixed in this bug. So let's consider this VERIFIED after all per comment 38, and let's get this uplifted to beta. (In reply to Sylvestre Ledru [:sylvestre] from comment #36) > Comment on attachment 8776121 [details] > As comment #34 suggests it is not actually fixed, not taking it for beta for now. (Please retriage, sylvestre, since we've determined that Ciprian's "not-fixed" report was a distinct, non-regression, possibly-proxy-dependent bug.)
Status: RESOLVED → VERIFIED
Flags: needinfo?(bgirard) → needinfo?(sledru)
Comment on attachment 8776121 [details] Bug 1290505 - Remove E10S NPAPI plugin windows special case. ok, let's do it!
Flags: needinfo?(sledru)
Attachment #8776121 - Flags: approval-mozilla-beta- → approval-mozilla-beta+
Too risky for 48, let it ride the train from 49
I verified again this issue on 49.0-build2 (2016-09-07) and 50.0a2 latest Aurora (2016-09-12), using Mac OS X 10.11 with a different proxy plugin. I can confirm that this issue is verified fixed, on the Firefox builds mentioned above. Changing the flags accordingly.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: