Bug 1290505 - Remove E10S NPAPI plugin windows special case. r=jimm, a=ritu

MozReview-Commit-ID: 7F7JeVmudjq